--- a/Vkone/src/main/webapp/WEB-INF/web.xml
+++ b/Vkone/src/main/webapp/WEB-INF/web.xml
@@ -6,5 +6,22 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
+	<servlet>
+		<servlet-name>laptopservice</servlet-name>
+		<servlet-class>
+			org.glassfish.jersey.servlet.ServletContainer
+		</servlet-class>
+		
+		<init-param>
+		  <param-name>jersey.config.server.provider.packages</param-name>
+		  <param-value>services</param-value>
+		</init-param>
+		
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>laptopservice</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
   </welcome-file-list>
 </web-app>
