--- a/Vkone/src/main/webapp/WEB-INF/web.xml
+++ b/Vkone/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 	<servlet>
-		<servlet-name>vaalikone</servlet-name>
+		<servlet-name>vkone</servlet-name>
 		<servlet-class>
 			org.glassfish.jersey.servlet.ServletContainer
 		</servlet-class>
@@ -22,7 +22,7 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>vaalikone</servlet-name>
+		<servlet-name>vkone</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
 </web-app>
