--- a/Vkone/pom.xml
+++ b/Vkone/pom.xml
@@ -142,6 +142,14 @@
 	</dependency>
 
 <!-- END: Added by Pena -->
+
+<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.15</version>
+</dependency>  
+
         <!-- Test Dependencies -->
             
         <dependency>
